<resources>
    <string name="app_name">RFID-Reader</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="m_connect_str">CONNECTIVITY</string>
    <string name="m_sd_func_str">SD FUNCTION</string>
    <string name="m_rf_conf_str">RF CONFIG</string>
    <string name="m_rf_acc_str">RF ACCESS</string>
    <string name="m_rf_sel_str">RF SELECTION</string>
    <string name="m_rapid_str">SCAN</string>
    <string name="m_inv_str">INVENTORY</string>
    <string name="m_bar_str">BARCODE(BC)</string>
    <string name="m_bar_sb_str">BARCODE(SB)</string>
    <string name="m_bat_str">BATTERY</string>
    <string name="m_info_str">INFORMATION</string>
    <string name="read_start_str">START</string>
    <string name="read_stop_str">STOP</string>
    <string name="yes_str">YES</string>
    <string name="no_str">NO</string>
    <string name="want_tracking_str">Do you want to track selected tag?</string>
    <string name="locating_str">Locating</string>
    <string name="sled_info_str">Software Information</string>
    <string name="copyright_str">Copyright © 2015 - 2026 Bluebird Inc,\nAll rights reserved.</string>
    <string name="copy_str">Copyright © 2017 Bluebird Inc, All Rights Reserved.</string>
    <string name="set_mode_key_enable_str">Set ModeKey Enable</string>
    <string name="set_mode_key_disable_str">Set ModeKey Disable</string>
    <string name="get_mode_key_enable_state_str">Get ModeKey State</string>
    <string name="set_trg_key_enable_str">Set TriggerKey Enable</string>
    <string name="set_tag_buzzer_enable_str">Set Tag BZ Enable</string>
    <string name="set_tag_buzzer_disable_str">Set Tag BZ Disable</string>
    <string name="get_tag_buzzer_state_str">Get Tag BZ State</string>
    <string name="set_tag_buzzer_sound_str">Set Tag BZ Sound</string>
    <string name="set_led_enable_str">Set LED Enable</string>
    <string name="set_led_disable_str">Set LED Disable</string>
    <string name="get_led_state_str">Get LED State</string>
    <string name="set_trg_key_disable_str">Set TriggerKey Disable</string>
    <string name="get_trg_key_enable_state_str">Get TriggerKey State</string>
    <string name="set_multi_scan_type_enable_str">MultiScanType Enable</string>
    <string name="set_multi_scan_type_disable_str">MultiScanType Disable</string>
    <string name="get_multi_scan_type_str">Get MultiScanType State</string>
    <string name="os_version_str">Android Build Number : </string>
    <string name="rf_lib_version_str">RFID Library Version : </string>
    <string name="rf_module_version_str">RFID Module Version : </string>
    <string name="sd_lib_version_str">Firmware Version : </string>
    <string name="sd_bt_version_str">BT Firmware Version : </string>
    <string name="sd_serial_str">Serial Number : </string>
    <string name="app_version_str">Application Version : </string>
    <string name="bootloader_version_str">Bootloader Version : </string>
    <string name="sel_mem_type_str">Memtype</string>
    <string name="sel_mask_str">Mask</string>
    <string name="sel_start_pos_str">StartPos</string>
    <string name="sel_mask_length_str">Mask Length</string>
    <string name="sel_action_str">Action</string>
    <string name="set_criteria_str">Set Criteria</string>
    <string name="remove_criteria_str">Remove Criteria</string>
    <string name="set_selection_str">Set Selection</string>
    <string name="get_selection_str">Get Selection</string>
    <string name="remove_selection_str">Remove Selection</string>
    <string name="sled_connected_str">State : Connected</string>
    <string name="rfr900">RFR900</string>
    <string name="rfr901">RFR901</string>
    <string name="rfr971">RFR971</string>
    <string name="internal_rfid">Internal RFID</string>
    <string name="use_frequency">Frequency</string>
    <string name="use_epc_convert">EPC CONVERT</string>
    <string name="remove_pc_str">REMOVE PC</string>
    <string name="selection_str">SELECT</string>
    <string name="toggle_str">TOGGLE</string>
    <string name="file_str">FILE</string>
    <string name="session_str">Session</string>
    <string name="sel_flag_str">SL Flag</string>
    <string name="turbo_str">TURBO</string>
    <string name="tag_str">TAG C</string>
    <string name="rssi_str2">RSSI</string>
    <string name="filter_str">FILTER</string>
    <string name="sound_str">SOUND</string>
    <string name="inven_str">START</string>
    <string name="track_str">START</string>
    <string name="stop_inven_str">STOP</string>
    <string name="stop_track_str">STOP</string>
    <string name="back_inv_str">Back to Inventory</string>
    <string name="available_regions_str">Available Regions</string>
    <string name="set_region_str">Set Region</string>
    <string name="get_region_str">Get Region</string>
    <string name="get_available_region_str">Available Region</string>
    <string name="set_target_str">Set Inventory\nTarget</string>
    <string name="get_target_str">Get Inventory\nTarget</string>
    <string name="set_duty_str">Set Duty\n(0 ~ 1000)</string>
    <string name="get_duty_str">Get Duty</string>
    <string name="set_accesstime_str">Set AccessTimeout\n(100 ~ 10000)</string>
    <string name="get_accesstime_str">Get AccessTimeout</string>
    <string name="set_dwell_str">Set Dwelltime\n(50 ~ 400)</string>
    <string name="get_dwell_str">Get Dwelltime</string>
    <string name="set_power_str">Set RFPower\n(5 ~ 30)</string>
    <string name="get_power_str">Get RFPower</string>
    <string name="set_min_sing_str">Set Min Singulation</string>
    <string name="set_max_sing_str">Set Max Singulation</string>
    <string name="get_min_sing_str">Get Min Singulation</string>
    <string name="get_max_sing_str">Get Max Singulation</string>
    <string name="set_rfmode_expansion_str">Set RF Expansion</string>
    <string name="get_rfmode_expansion_str">Get RF Expansion</string>
    <string name="set_sing_str">Set Singulation\n(0 ~ 15)</string>
    <string name="get_sing_str">Get Singulation</string>
    <string name="set_rfmode_str">Set RFMODE\n(0 ~ 3)</string>
    <string name="set_rfmode_str_ext">Set RFMODE\n(0 ~ 4)</string>
    <string name="get_rfmode_str">Get RFMODE</string>
    <string name="set_lbt_str">Set LBT\n(0, 1, 3)</string>
    <string name="set_iso_code_str">Set ISO code</string>
    <string name="get_iso_code_str">Get ISO code</string>
    <string name="get_lbt_str">Get LBT</string>
    <string name="set_gen2x_str">Set Gen2x\n(0, 1, 2)</string>
    <string name="get_gen2x_str">Get Gen2x</string>
    <string name="set_toggle_str">Set Toggle</string>
    <string name="get_toggle_str">Get Toggle</string>
    <string name="set_rssi_str">Set RSSI</string>
    <string name="get_rssi_str">Get RSSI</string>
    <string name="set_enable_channels">Set Enable Channels</string>
    <string name="get_enable_channels">Get Enable Channels</string>
    <string name="get_default_channels">Get Default Channels</string>
    <string name="set_antenna">Set Antenna</string>
    <string name="get_antenna">Get Antenna</string>
    <string name="get_antenna_gpio">Get AntDetect(GPIO)</string>
    <string name="get_antenna_rampup">Get AntDetect(RampUp)</string>
    <string name="set_current_antenna">Set Current Antenna</string>
    <string name="get_current_antenna">Get Current Antenna</string>
    <string name="set_tag_focus">Set Tag Focus</string>
    <string name="get_tag_focus">Get Tag Focus</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="received_msg_str">Message : </string>
    <string name="received_data_str">Recv Data : </string>
    <string name="version_str">"Version"</string>
    <string name="read_data_str">"Read Data : "</string>
    <string name="empty_str">""</string>
    <string name="newline_str">"\n"</string>
    <string name="connect_state_str">"Current Connect state : "</string>
    <string name="connect_str">"Connect"</string>
    <string name="disconnect_str">"Disconnect"</string>
    <string name="connected_str">"Connected"</string>
    <string name="home_str">"Home"</string>
    <string name="disconnected_str">"Disconnected"</string>
    <string name="get_con_str">"Get con state"</string>
    <string name="set_rfid_str">"Set RFID Mode"</string>
    <string name="set_barcode_str">"Set BARCODE Mode"</string>
    <string name="get_trg_str">"Get trg Mode"</string>
    <string name="pause_barcode_str">"Pause Barcode"</string>
    <string name="resume_barcode_str">"Resume Barcode"</string>
    <string name="get_barcode_state_str">"Get Barcode State"</string>
    <string name="enable_multi_str">"Enable Multi"</string>
    <string name="disable_multi_str">"Disable Multi"</string>
    <string name="enable_dw_str">"Enable DataWedge"</string>
    <string name="disable_dw_str">"Disable DataWedge"</string>
    <string name="get_dw_str">"GET DataWedge STATE"</string>
    <string name="get_multi_str">"Get Multi State"</string>
    <string name="get_barcode_camera_info_str">"Get Barcode/Camera info"</string>
    <string name="get_barcode_info_str">"Get Barcode info"</string>
    <string name="press_barcode_str">"Barcode Press"</string>
    <string name="release_barcode_str">"Barcode Release"</string>
    <string name="set_barcode_hw_str">"Set BC/HW Key"</string>
    <string name="get_barcode_hw_str">"Get BC/HW Key"</string>
    <string name="set_trigger_str">"Set BC Trigger"</string>
    <string name="get_trigger_str">"Get BC Trigger"</string>
    <string name="set_multi_count_str">"Set Multi Num"</string>
    <string name="get_multi_count_str">"Get Multi Num"</string>
    <string name="set_sleep_str">"Set Sleeptime"</string>
    <string name="get_sleep_str">"Get Sleeptime"</string>
    <string name="get_buzzer_str">"Get Buzzer LV"</string>
    <string name="set_buzzer_str">"Set Buzzer LV"</string>
    <string name="get_buzzer_state_str">"Get Buzzer State"</string>
    <string name="set_buzzer_mute_str">"Set Buzzer Mute"</string>
    <string name="set_buzzer_noisy_str">"Set Buzzer Noisy"</string>
    <string name="get_bat_str">"Get Batt LV"</string>
    <string name="set_default_all">"Set SD Default"</string>
    <string name="get_firm_str">"Get Firmware Version"</string>
    <string name="update_package_fw_str">"Update Pakage-Firmware"</string>
    <string name="sleep_str">"Sleeptime"</string>
    <string name="get_charge_str">"Get Charge State"</string>
    <string name="get_smart_batt">"Get Smart Staus"</string>
    <string name="get_smart_voltage">"Get Smart Voltage"</string>
    <string name="get_smart_present">"Get Smart Present"</string>
    <string name="get_smart_level">"Get Smart level"</string>
    <string name="get_smart_life_time">"Get Smart LifeTime"</string>
    <string name="get_smart_health">"Get Smart Health"</string>
    <string name="get_smart_temperature">"Get Smart Temperature"</string>
    <string name="get_smart_cycle_cnt">"Get Smart CycleCount"</string>
    <string name="get_smart_capacity">"Get Smart Capacity"</string>
    <string name="get_smart_serial">"Get Smart Serial"</string>
    <string name="smart_critical_temper_title">"Battery Critical Temperature"</string>
    <string name="smart_critical_temper_str">"The battery temperature is 58 degrees or higher."</string>
    <string name="set_serial_str">"Set Serial No."</string>
    <string name="get_serial_str">"Get Serial No."</string>
    <string name="update_rf_firm_str">"Update RFID Firmware"</string>
    <string name="update_firm_str">"Update SLED Firmware"</string>
    <string name="get_bt_version_str">"Get BT VERSION"</string>
    <string name="timer_str">"00:00:00.0"</string>
    <string name="read_time_str">"Read Time : "</string>
    <string name="count_str">"0"</string>
    <string name="clear_str">Clear List</string>
    <string name="speed_str">"Speed : "</string>
    <string name="battery_state_str">"Battery State : "</string>
</resources>